# wine-importer

./: .env.example  .gitignore  README.md  REBUILD_PLAN.md  SETUP_API_KEY.md  WORKFLOW.md  pyproject.toml  setup_api_key.py
.github/workflows/: ci.yml
data/canonical/: cellartracker_canonical.csv  sample_canonical.csv  wine_canonical_clean.csv
data/raw/: cellartracker_canonical.csv  full_wine_list.csv  sample_input.csv  testinv1.csv  wine_raw_test1.csv
docs/: cellartracker_api_request.md
runs/example/: 01_raw_copy.csv  02_parsed_rows.json  03_mapping.yaml  04_mapped_rows.json  05_normalized_rows.json  06_candidate_matches.json  07_reviewed_matches.json  08_cellartracker_import.csv  run_manifest.yaml
tests/: conftest.py  test_cellartracker_lookup.py  test_export.py  test_golden_run.py  test_models.py  test_network_canary.py  test_normalize.py  test_parse.py  test_pipeline.py  test_report.py  test_resolution_cache.py  test_review.py  test_schema_map.py  test_score.py  test_scorer_enrichment.py  test_search.py  test_table_detect.py  test_validation.py
tests/fixtures/cellartracker/: README.md  search_results_empty.html  search_results_many.html  wine_full.html  (+1 more)
wine_importer/: __init__.py  ai_parser.py  ai_runtime.py  ai_schema.py  cellartracker_lookup.py  cli.py  config.py  export.py  ingest.py  io.py  models.py  normalize.py  parse.py  pipeline.py  report.py  resolution_cache.py  review.py  schema_map.py  score.py  search.py  table_detect.py  validation.py
wine_importer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
