[project]
name = "wine-importer"
version = "0.1.0"
description = "Local-first CLI pipeline for importing messy wine spreadsheets into a cleaned CellarTracker-ready CSV."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "pydantic>=2.7",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "PyYAML>=6.0",
    "rapidfuzz>=2.16",
    "rich>=14.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.0",
]
documents = [
    "pypdf>=4.0",
    "Pillow>=10.0",
    "pytesseract>=0.3",
]
[project.scripts]
wine-importer = "wine_importer.cli:app"
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wine_importer"]

[tool.ruff]
line-length = 88
target-version = "py311"
